--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,109 +1,224 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Prompt|Roboto');
 
 html,
-body,
-#root,
-.App {
-  width: 100%;
-  height: 100%;
+body {
   margin: 0;
   padding: 0;
 }
 
 .App {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  padding-bottom: 36px;
+}
+
+ul {
   display: flex;
-
-  svg {
-    height: 100%;
-  }
-}
-
-.spacer {
-  height: 100%;
-}
-
-.bubble-wrap {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.colors-wrap {
-  height: 100%;
-  width: 300px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-
-  ul {
-    display: flex;
   justify-content: flex-end;
   margin: 0 0 36px;
   padding: 12px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-
-    li {
-      list-style: none;
-      margin-right: 6px;
-      color: #204963;
-    }
-  }
 }
 
-.delete {
-  color: rgb(216, 87, 87);
+li {
+  list-style: none;
+  margin-right: 6px;
+  color: #204963;
 }
 
-.color-box {
-  height: 16px;
-  width: 16px;
-  border: 1px lightgray solid;
-  margin-right: 36px;
-}
-
-form {
-  margin-top: 60px;
-  display: flex;
-  flex-direction: column;
-  
-
-  legend {
-    padding-left: 40px;
-    font-weight: bold;
-    text-align: left;
-    text-decoration: underline;
-    margin-bottom: 16px;
-  }
-
-  label {
-    display: flex;
-    justify-content: space-between;
-    padding: 4px 36px 4px 40px;
-  }
-
-  input {
-    width: 100px;
-    margin: 3px;
-    padding: 5px 5px;
-  }
-}
-
-.button-row {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 36px 0 41px;
-
-  button {
-    border: none;
-    background-color: black;
-    color: white;
-    padding: 3px 8px;
-    margin-top: 16px;
-    
-  }
-}
 a {
   text-decoration: none;
   padding: 6px;
   color: #204963;
+}
+
+.gas-wrapper {
+  background-color: #d0c5bb;
+  display: flex;
+  width: fit-content;
+  flex-flow: column nowrap;
+  margin: 0 auto;
+  padding: 24px 58px;
+}
+
+.title-wrapper {
+  background-color: #d0c5bb;
+  padding: 24px 58px;
+  width: 539px;
+  margin: 0 auto;
+}
+
+.title {
+  background-color: #204963;
+  width: 300px;
+  padding: 6px;
+  margin: 0 auto;
+  border-radius: 4px;
+}
+
+.inner-wrapper {
+  background-color: #ffffff;
+  padding: 4px;
+}
+
+.top-title {
+  font-family: 'Prompt', sans-serif;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.62);
+  font-size: 32px;
+  background-color: #ea7158;
+  color: #ffffff;
+}
+
+.bottom-title {
+  font-family: 'Kaushan Script', cursive;
+  color: #204963;
+  font-size: 22px;
+}
+
+.key {
+  background-color: #d0c5bb;
+  padding: 24px 58px;
+  width: 539px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.US-key {
+  width: 28px;
+  height: 12px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  margin: 0 6px;
+}
+
+.Hawaii-key {
+  width: 28px;
+  height: 12px;
+  border-radius: 4px;
+  background-color: #204963;
+  margin: 0 6px;
+}
+
+.US-key-text {
+  color: #ffffff;
+  margin: 0;
+  margin-right: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
+
+.Hawaii-key-text {
+  color: #204963;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
+
+.spinner {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  color: #204963;
+}
+
+.year {
+  border-left: 1px solid #ea7158;
+  border-top: 1px solid #ea7158;
+  border-bottom: 1px solid #ea7158;
+  margin: 0 0 32px;
+  height: 376px;
+  font-size: 8px;
+  color: #ea7158;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  justify-content: center;
+}
+
+.year:first-of-type {
+  margin-top: 10px;
+}
+
+.year:last-of-type {
+  height: 205px;
+  margin: 0;
+}
+
+.columns {
+  display: flex;
+}
+
+.price-graph {
+  position: relative;
+}
+
+.date {
+  position: absolute;
+  left: 0;
+  top: -3px;
+  z-index: 12;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  left: -6px;
+  background-color: #ea7158;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.date > p {
+  color: #ffffff;
+  font-size: 10px;
+  margin: 0;
+}
+
+.hawaii-graph {
+  width: 400px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.hawaii-graph > p {
+  margin: 0;
+  margin-left: 6px;
+  color: #204963;
+  font-size: 10px;
+}
+
+.hawaii-line {
+  background-color: #204963;
+  height: 22px;
+  border-radius: 3px;
+}
+
+.us-graph {
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  top: 4px;
+}
+
+.us-line {
+  background-color: #ffffff;
+  height: 14px;
+  border-radius: 2px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding-right: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.us-line > p {
+  margin: 0;
+  margin-left: 6px;
+  color: #204963;
+  font-size: 8px;
 }
